--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -834,10 +834,10 @@
                 </FrameLayout>
 
                 <FrameLayout
-                    android:visibility="invisible"
                     android:layout_width="wrap_content"
                     android:layout_height="90dp"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:visibility="invisible">
 
                     <android.support.v7.widget.CardView
                         android:id="@+id/zybz"
@@ -886,9 +886,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="90dp"
                     android:layout_weight="1"
-                    android:visibility="invisible">
+                    >
 
                     <android.support.v7.widget.CardView
+                        android:id="@+id/hj"
                         android:layout_width="@dimen/status_btn_width"
                         android:layout_height="@dimen/status_btn_height"
                         android:layout_gravity="center"
@@ -900,7 +901,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="异常分析"
+                            android:text="呼叫"
                             android:textColor="#000000"
                             android:textSize="24dp" />
                     </android.support.v7.widget.CardView>
@@ -910,13 +911,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="90dp"
                     android:layout_weight="1"
-                    android:visibility="invisible">
+                    >
 
                     <android.support.v7.widget.CardView
+                        android:id="@+id/jshj"
                         android:layout_width="@dimen/status_btn_width"
                         android:layout_height="@dimen/status_btn_height"
                         android:layout_gravity="center"
-                        app:cardBackgroundColor="#b8dde8"
+                        app:cardBackgroundColor="@android:color/holo_red_dark"
                         app:cardCornerRadius="@dimen/status_rad"
                         app:cardElevation="@dimen/status_ele">
 
@@ -924,7 +926,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="异常分析"
+                            android:text="结束呼叫"
                             android:textColor="#000000"
                             android:textSize="24dp" />
                     </android.support.v7.widget.CardView>
